[package]
name = "bt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.4"
sha1 = "0.10.6"
anyhow = "1.0.92"
url = "2.5.3"
percent-encoding = "2"
serde_bytes = "0.11.3"
log = "0.4.26"
env_logger = "0.10.0"
byteorder = "1.5.0"
clap = { version = "4.5.34", features = ["derive"] }
rand = "0.9.0"
